release/kubernetes/finpilot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finpilot-service
spec:
  selector:
    app: finpilot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
